force-app/main/default/objects/nXBI__Business_Credit_Business_Information__c/nXBI__Business_Credit_Business_Information__c.object-meta.xml
<CustomObject>
    <label>Business Credit Business Information</label>
    <nameField>
        <displayFormat>BI-{00000000}</displayFormat>
        <label>Business Information Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Business Credit Business Information</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>