force-app/main/default/objects/nXBI__Business_Credit_Business_Information__c/fields/nXBI__Business_Name__c.field-meta.xml
<CustomField>
    <fullName>nXBI__Business_Name__c</fullName>
    <label>Business Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>