force-app/main/default/objects/nXBI__Business_Credit_Business_Information__c/fields/nXBI__City__c.field-meta.xml
<CustomField>
    <fullName>nXBI__City__c</fullName>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>