force-app/main/default/objects/nXBI__Business_Credit_Business_Information__c/fields/nXBI__Phone__c.field-meta.xml
<CustomField>
    <fullName>nXBI__Phone__c</fullName>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>