force-app/main/default/objects/nXBI__Business_Credit_Business_Information__c/fields/nXBI__SIC_Description__c.field-meta.xml
<CustomField>
    <fullName>nXBI__SIC_Description__c</fullName>
    <label>SIC Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>