force-app/main/default/objects/nXBI__Business_Credit_Business_Information__c/fields/nXBI__Street__c.field-meta.xml
<CustomField>
    <fullName>nXBI__Street__c</fullName>
    <label>Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>