force-app/main/default/objects/nXBI__Business_Credit_Business_Information__c/fields/nXBI__Zip__c.field-meta.xml
<CustomField>
    <fullName>nXBI__Zip__c</fullName>
    <label>Zip</label>
    <length>10</length>
    <type>Text</type>
</CustomField>